--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 .luck-btn-wrap{
   width:max(100px, 31vw);
   max-width:220px;
-  margin:18px auto 8px;            /* centers in your page flow */
-  display:flex; flex-direction:column; align-items:center;
+  margin:18px 0 8px 18px;            /* centers in your page flow */
+  display:flex; flex-direction:column; align-items:flex-start;
   pointer-events:auto;
 }
 .luck-btn-img{
