--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   width:max(100px, 31vw);
   max-width:220px;
   margin:18px 0 8px 18px;            /* centers in your page flow */
-  display:flex; flex-direction:column; align-items:flex-start;
+  display:flex; flex-direction:column; align-items:center;
   pointer-events:auto;
 }
 .luck-btn-img{
